--- a/ubuntu-focal64-latest/Vagrantfile
+++ b/ubuntu-focal64-latest/Vagrantfile
@@ -3,7 +3,7 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
-  config.vm.box_version = "20201117.0.0"
+  config.vm.box_check_update = true
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
   config.vm.synced_folder "share/", "/mnt/host"
