--- a/vagrant/kalilinux-v2021.2.0/Vagrantfile
+++ b/vagrant/kalilinux-v2021.2.0/Vagrantfile
@@ -7,7 +7,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = false
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "share/", "/mnt/host"
+  config.vm.synced_folder "../../_share/", "/mnt/host"
 
   config.vm.provider "virtualbox" do |vb|
     vb.name = "kalilinux-2021.2.0"
